--- a/homework/05-formula.html
+++ b/homework/05-formula.html
@@ -373,19 +373,19 @@ v=\frac{V_{max}[S]}{[S]}+K_m(\left(1+\frac{[I]}{K_i}\right)
 <li>Non-competitive</li>
 </ul>
 <p><span class="math display">\[
-v=\frac{V_{max}[S]}{K_m(\left(1+\frac{[I]}{K_i}\right)+[S](\left(1+\frac{[I]}{K_i})\right)}
+v=\frac{V_{max}[S]}{K_m(\left(1+\frac{[I]}{K_i}\right)+[S]\left(1+\frac{[I]}{K_i}\right)}
 \]</span></p>
 <ul>
 <li>Uncompetitive</li>
 </ul>
 <p><span class="math display">\[
-v=\frac{V_{max}[S]}{K_m+[S](\left(1+\frac{[I]}{K_i}\right)}
+v=\frac{V_{max}[S]}{K_m+[S]\left(1+\frac{[I]}{K_i}\right)}
 \]</span></p>
 <ul>
 <li>Mixed</li>
 </ul>
 <p><span class="math display">\[
-v=\frac{V_{max}[S]}{K_m(\left(1+\frac{[I]}{K_i}\right)+[S](\left(1+\frac{[I]}{aK_i}\right)}
+v=\frac{V_{max}[S]}{K_m(\left(1+\frac{[I]}{K_i}\right)+[S]\left(1+\frac{[I]}{aK_i}\right)}
 \]</span></p>
 </div>
 <div id="수식2.-estimation-of-ki-value-based-on-ic50-value" class="section level1">
